--- a/CEXDirect.xcodeproj/xcshareddata/xcschemes/CEXDirect.xcscheme
+++ b/CEXDirect.xcodeproj/xcshareddata/xcschemes/CEXDirect.xcscheme
@@ -40,7 +40,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug-UAT"
+      buildConfiguration = "Debug-Production"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -92,7 +92,7 @@
       buildConfiguration = "Debug-Development">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release-Development"
+      buildConfiguration = "Release-Production"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
