--- a/CEXDirect/Info.plist
+++ b/CEXDirect/Info.plist
@@ -19,9 +19,9 @@
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSCameraUsageDescription</key>
-	<string>$(PRODUCT_NAME) use camera to load documents</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>$(PRODUCT_NAME) use photo library for add photo</string>
+    <string>$(PRODUCT_NAME) uses camera to upload documents</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>$(PRODUCT_NAME) uses photo library to upload documents</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>OpenSans-Regular.ttf</string>
