--- a/CEXDirect.xcodeproj/xcshareddata/xcschemes/CEXDirect.xcscheme
+++ b/CEXDirect.xcodeproj/xcshareddata/xcschemes/CEXDirect.xcscheme
@@ -40,7 +40,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug-Production"
+      buildConfiguration = "Debug-Development"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
