--- a/CEXDirectDemo/Info.plist
+++ b/CEXDirectDemo/Info.plist
@@ -20,18 +20,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>$(PRODUCT_NAME) use camera to load documents</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>$(PRODUCT_NAME) use photo library for add photo</string>
+    <string>$(PRODUCT_NAME) uses camera to upload documents</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>$(PRODUCT_NAME) uses photo library to upload documents</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>OpenSans-Regular.ttf</string>
+        <string>OpenSans-Bold.ttf</string>
 		<string>OpenSans-ExtraBold.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
